perf(系统设置): 资源池验证优化
https://github.com/metersphere/metersphere/issues/34908